Add Slack notifications for savings fund jobs
Publish Spring events from reservation, issuing, subscription,
redemption, and payment-returning jobs. SavingsFundNotifier listens
and sends summaries to a new SAVINGS Slack channel.